--- a/frontend/src/containers/Checkout.css
+++ b/frontend/src/containers/Checkout.css
@@ -1,3 +1,21 @@
 .Checkout {
     margin-top: 50px;
+    background-color: white !important;
+    margin-bottom: 500px;
+}
+
+.charcot-checkout-container-row {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    border-bottom: 1px dashed lightgray;
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.Checkout h3 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    padding-bottom: 30px;
 }
