--- a/frontend/src/containers/Search.css
+++ b/frontend/src/containers/Search.css
@@ -1,14 +1,22 @@
 .Search {
     margin-top: 50px;
 }
+
+.Search table {
+   margin-left: -50px;
+}
+
 .Search table, td {
     border: none !important;
     vertical-align: top;
 }
 
 .Search table tbody tr td > div {
-    height: 400px;
+    height: 200px;
     overflow: auto !important;
     box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
     background-color: white;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    font-size: x-small !important;
 }
