feat(search): left nav layout accomplished

--- a/frontend/src/containers/Search.css
+++ b/frontend/src/containers/Search.css
@@ -1,9 +1,10 @@
 .Search {
     margin-top: 50px;
+    margin-left: 130px;
 }
 
 .Search table {
-   margin-left: -50px;
+   /*margin-left: -50px;*/
 }
 
 .Search table, td {
