feat(search): see below - flesh out checkout page by leveraging leftnav accordion - dynamically size the charts - add 'clear all' button

--- a/frontend/src/containers/LeftNav.css
+++ b/frontend/src/containers/LeftNav.css
@@ -1,4 +1,4 @@
-.LeftNav {
+.LeftNav .DimensionAccordion {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -10,6 +10,6 @@
     overflow: scroll;
 }
 
-.charcot-leftnav-according-item {
+.LeftNav .charcot-accordion-item {
     width: 191px;
 }
