--- a/frontend/src/containers/Checkout.css
+++ b/frontend/src/containers/Checkout.css
@@ -1,4 +1,16 @@
-.Checkout {
+.Checkout #back-to-search-btn {
+    /*float: left;*/
+    /*margin-right: 50px;*/
+    margin-top: 10px;
+    width: 175px;
+    /*border: black thin;*/
+    border: 1px solid lightgray;
+    background-color: transparent;
+    color: #0d6efd;
+    font-weight: normal;
+}
+
+.charcot-checkout-container {
     margin-top: 50px;
     background-color: white !important;
     margin-bottom: 500px;
@@ -14,8 +26,9 @@
     margin-left: 0px;
 }
 
-.Checkout h3 {
+.charcot-checkout-container h3 {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     padding-bottom: 30px;
 }
+
