--- a/frontend/src/containers/Filter.css
+++ b/frontend/src/containers/Filter.css
@@ -3,9 +3,23 @@
 }
 
 .Filter #clear-all-btn {
-    background-color: white;
-    color: #0d6efd;
+    background-color: steelblue;
     height: 32px;
     border-radius: 18px;
     font-size: 10px;
+}
+
+.Filter .clear-predicate-btn {
+    background-color: #46d246;
+    height: 32px;
+    border-radius: 18px;
+    font-size: 10px;
+    margin-left: 5px !important;
+}
+
+.Filter .remove {
+    font-weight: bolder;
+    font-size: 12px;
+    color: dimgray;
+    margin-left: 2px;
 }
