feat(login): add login
feat(login): add login save

feat(login): add login save

feat(login): add login save

feat(login): add login save

feat(login): add login save

feat(login): add login save

feat(login): add login save

feat(login): add login save

--- a/frontend/src/containers/Footer.css
+++ b/frontend/src/containers/Footer.css
@@ -7,6 +7,7 @@
 
 .Footer #next-btn, #submit-btn {
     float: right;
+    margin-top: 0px;
     margin-right: 50px;
     width: 175px;
     border: none;
