--- a/frontend/src/containers/Filter.css
+++ b/frontend/src/containers/Filter.css
@@ -1,15 +1,15 @@
-.Filter {
+.FilterComponent {
     margin-bottom: 10px;
 }
 
-.Filter #clear-all-btn {
+.FilterComponent #clear-all-btn {
     background-color: steelblue;
     height: 32px;
     border-radius: 18px;
     font-size: 10px;
 }
 
-.Filter .clear-predicate-btn {
+.FilterComponent .clear-predicate-btn {
     background-color: #46d246;
     height: 32px;
     border-radius: 18px;
@@ -17,7 +17,7 @@
     margin-left: 5px !important;
 }
 
-.Filter .remove {
+.FilterComponent .remove {
     font-weight: bolder;
     font-size: 12px;
     color: dimgray;
