--- a/frontend/src/components/FilterComponent.css
+++ b/frontend/src/components/FilterComponent.css
@@ -19,7 +19,8 @@
 
 .FilterComponent .remove {
     font-weight: bolder;
-    font-size: 12px;
-    color: dimgray;
+    line-height: 10px;
+    font-size: 18px;
+    color: red;
     margin-left: 4px;
 }
