feat(transaction): add filtering capabilities to transaction UI

--- a/frontend/src/containers/Transaction.css
+++ b/frontend/src/containers/Transaction.css
@@ -18,3 +18,8 @@
 .Transaction .input-group {
     width: 20%;
 }
+
+.Transaction .transactions-per-page {
+    float: left;
+    margin-right: 50px;
+}
