--- a/frontend/src/containers/Transaction.css
+++ b/frontend/src/containers/Transaction.css
@@ -23,3 +23,25 @@
     float: left;
     margin-right: 50px;
 }
+
+/* For some reason lost rounding after adding clear button, add manually as a workaround */
+.Transaction #searchTerm {
+    border-top-right-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+}
+
+.search-term-clear-btn {
+    position: absolute;
+    width: 10px;
+    font-weight: 550;
+    border: none;
+    background-color: transparent;
+    line-height: 35px;
+    left: calc(100% - 30px);
+    z-index: 99999;
+}
+
+.search-term-clear-btn:hover {
+    color: blue;
+}
+
